--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -24,7 +24,8 @@
   "devDependencies": {
     "dotenv": "16.3.1",
     "vite": "5.0.5",
-    "vite-plugin-solid": "2.7.2"
+    "vite-plugin-solid": "2.7.2",
+    "@types/dompurify": "3.0.5"
   },
   "dependencies": {
     "@dfinity/ledger-icrc": "2.0.0",
@@ -36,6 +37,7 @@
     "js-big-decimal": "2.0.4",
     "solid-chartjs": "1.3.8",
     "solid-js": "1.8.7",
-    "solid-styled-components": "0.28.5"
+    "solid-styled-components": "0.28.5",
+    "dompurify": "3.0.6"
   }
 }
